--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,8 @@ jobs:
          uses: aws-actions/configure-aws-credentials@v1
          with:
            aws-access-key-id    : ${{ secrets.MY_ACCESS_KEY }}
-           aws-secret-access-key: ${{ secrets.MY_SESSION_TOKEN }}
-           aws-session-token    : ${{ secrets.SECRET_ACCESS_KEY}}
+           aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+           aws-session-token    : ${{ secrets.MY_SESSION_TOKEN}}
            aws-region: ap-south-1
 
        - name: Terraform fmt
