--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -2,10 +2,10 @@ name: Second workflow Terraform Destroy
 on:
    # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    # branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
+  workflow_dispatch:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs: 
@@ -34,7 +34,7 @@ jobs:
         run : terraform init
 
       - name: Show Destroy plan
-        run : terraform plan -destroy
+        run : terraform plan 
         
       - name: Terraform destroy
         id: destroy
