--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -19,7 +19,7 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.0.0
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id    : ${{ secrets.MY_ACCESS_KEY }}
