--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,4 +1,4 @@
-name:  Second workflow Terraform Destroy
+name:  Second workflow  Destroy
 on:
    # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
